--- a/file_tree.html
+++ b/file_tree.html
@@ -36,7 +36,9 @@ summary{cursor:pointer}</style>
 <li><a href=".\.bu\fontcss.html">fontcss.html</a></li>
 <li><a href=".\.bu\fontcss.n.html">fontcss.n.html</a></li>
 <li><a href=".\.bu\goatori.html">goatori.html</a></li>
+<li><a href=".\.bu\grd.html">grd.html</a></li>
 <li><a href=".\.bu\index-part.txt">index-part.txt</a></li>
+<li><a href=".\.bu\index.html">index.html</a></li>
 <li><a href=".\.bu\me.html">me.html</a></li>
 <li><a href=".\.bu\meabout.html">meabout.html</a></li>
 <li><a href=".\.bu\nic.html">nic.html</a></li>
