--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     font-size: var(--fs);
     line-height: 120%;
     color:var(--tc);
+    letter-spacing: .05vw;
 }
 
 .material-symbols-outlined {
