--- a/widgets/intro.html
+++ b/widgets/intro.html
@@ -32,14 +32,14 @@ h2:hover::after,h3:hover::after,h4:hover::after,h5:hover::after{content: '\00a0 
     display: block;
     /* width: 100%; */
     padding: 2vh 2vw;
-    background-color: rgb(242, 241, 241);
+    background-color:  rgb(242, 241, 241);
     border-top-left-radius:.5rem;
     border-top-right-radius: .5rem;
     border: .5px solid lightgray;
     /* font-family:'Bootstrap-icons';
     content: '\F333'; */
     /* content: '⬒ Information'; */
-    content: ' Notice';
+    content: ' Notice';
 }
 
 /* .note>p:before{
@@ -47,6 +47,12 @@ h2:hover::after,h3:hover::after,h4:hover::after,h5:hover::after{content: '\00a0 
     font-family:'Bootstrap-icons';
     content: '\F333';
 } */
+
+pre{
+    background-color: rgb(242, 241, 241);
+    padding: 1rem;
+    border-radius: .3rem;
+}
 </style>
 </head>
 <body style=" margin: 0 3.5vw;">
