--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<link rel='stylesheet' href='https://xolyn.github.io/font.css'>
+<link rel='stylesheet' href='font.css'>
 <link rel="shortcut icon" href="https://f.zly.vg/assets/kDisk.png">
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
@@ -17,9 +17,10 @@
     --bc: white;
     --ac: lightgray;
     /* --ff: Inter, sans-serif; */
-    --ff: 'nhg';
+    --ff: 'univ';
     --fs: small;
     --hp: 4vw;
+    font-feature-settings: "ss15";
 }
 
 *,html,body{
@@ -27,7 +28,8 @@
     font-size: var(--fs);
     line-height: 120%;
     color:var(--tc);
-    letter-spacing: .05vw;
+    letter-spacing: .035vw;
+    font-feature-settings: "ss15";
 }
 
 .material-symbols-outlined {
@@ -272,7 +274,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         </tr>
         <tr>
             <td>Master's</td>
-            <td> <a href="http://cornell.edu/">Cornell Univeristy</a></td>
+            <td> <a href="http://cornell.edu/">Cornell University</a></td>
         </tr>
         </tbody>
     </table>
