--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     --ff: 'univ';
     --fs: small;
     --hp: 4vw;
-    font-feature-settings: "ss15";
 }
 
 *,html,body{
@@ -30,6 +29,7 @@
     color:var(--tc);
     letter-spacing: .035vw;
     font-feature-settings: "ss15";
+    -webkit-font-smoothing: antialiased;
 }
 
 .material-symbols-outlined {
