--- a/fontcss.html
+++ b/fontcss.html
@@ -325,6 +325,13 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend>aptos</legend>
             <div style="font-family:aptos;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend id="var">arimo</legend>
+            <div style="font-family:arimo;" class="usrtxt" contenteditable ></div>
+        </fieldset>
+
+
         <fieldset>
             <legend>bios</legend>
             <div style="font-family:bios;" class="usrtxt" contenteditable ></div>
