--- a/widgets/index.html
+++ b/widgets/index.html
@@ -5,17 +5,19 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel='stylesheet' href='https://xolyn.github.io/font.css'>
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
+<link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/30/1A1A1A/widgy.png" type="icon">
 <!-- https://icons.getbootstrap.com/ -->
 <link rel="stylesheet" href="widgets.css">
-<link rel="preconnect" href="https://rsms.me/">
-<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <title>widgetz</title>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap');
+
 /* h1:hover::after, */
 :root{
-font-family: arimo;
+font-family: "Arimo", serif;
 /* font-family: Inter, sans-serif; */
-font-feature-settings: 'liga' 1, 'calt' 1, 'ccmp' 1; 
+/* font-feature-settings: 'liga' 1, 'calt' 1, 'ccmp' 1;  */
+-webkit-font-smoothing: antialiased;
 }
 h2:hover::after,h3:hover::after,h4:hover::after,h5:hover::after{content: '\00a0 \F470'; font-family:'Bootstrap-icons'; font-size: smaller;}
 
