--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ margin: .25rem 0;
 
 #proj>img{
     aspect-ratio: 1/1;
+    object-fit: cover;
     /* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4); */
 }
 
@@ -220,6 +221,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <a href="https://portfolio.zhoulingyu.net">Portfolio</a>
         <a href="https://drive.zhoulingyu.net" translate="no">ZDrive</a>
         <a href="https://xolyn.github.io/fg2.html">Font Studio</a>
+        <!-- <a href="https://xolyn.github.io/widgets">Gadgetz</a> -->
         <a href="https://zly.vg/cv.pdf">Résumé</a>
     </div>
 
@@ -327,6 +329,15 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
             <img   src="https://images.unsplash.com/photo-1700157710823-2e9e58414802?q=80&w=3132&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 100%;">
             <div id="projDesc">
                 <a href="https://xolyn.github.io/5999proj">Time Series Analysis</a>
+            </div>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div id="proj">
+            <img   src="https://i.pinimg.com/originals/30/8d/fd/308dfd052f050d31b8c05c6a63c0831f.gif" style="width: 100%;">
+            <div id="projDesc">
+                <a href="https://xolyn.github.io/widgets">Gadgetz</a>
             </div>
         </div>
       </div>
