--- a/widgets/index.html
+++ b/widgets/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/30/1A1A1A/widgy.png" type="icon">
 <!-- https://icons.getbootstrap.com/ -->
 <link rel="stylesheet" href="widgets.css">
-<title>widgetz</title>
+<title>gadgetz</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap');
 
@@ -59,13 +59,13 @@ pre{
 </head>
 <body style=" margin: 5vh 3.5vw;">
     <h1>
-        widgetz
+        gadgetz
     </h1>
 
     <p>Some predefined widgets for web.</p>
 
     <h2>Horizontal scrollable</h2>
-    
+    <p style="color: gray;"><div style="display: inline-block; background-color: rgb(242, 241, 241); padding: .5rem 1rem; border-radius: .7rem;">Shift</div> + wheel to scroll horizontally</p>
     <div class="note">
         <p>
             For customization purposes, contents inside do not have any pre-defined styles.
@@ -74,16 +74,16 @@ pre{
 
 
         <div class="hScroll">
-            <a style="margin: 0 1em;" href="#">Category1 </a>
-            <a style="margin: 0 1em;" href="#">Category2 </a>
-            <a style="margin: 0 1em;" href="#">Category3 </a>
-            <a style="margin: 0 1em;" href="#">Category4 </a>
-            <a style="margin: 0 1em;" href="#">Category5 </a>
-            <a style="margin: 0 1em;" href="#">Category6 </a>
-            <a style="margin: 0 1em;" href="#">Category7 </a>
-            <a style="margin: 0 1em;" href="#">Category8 </a>
-            <a style="margin: 0 1em;" href="#">Category9 </a>
-            <a style="margin: 0 1em;" href="#">Category10</a>
+            <a style="margin: 0 2.5vw;" href="#">Category1 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category2 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category3 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category4 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category5 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category6 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category7 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category8 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category9 </a>
+            <a style="margin: 0 2.5vw;" href="#">Category10</a>
         </div>
 
 <pre>
@@ -100,16 +100,16 @@ pre{
     <h3>With faded sides</h3>
 
     <div class="hScrollFaded">
-        <a style="margin: 0 1em;" href="#">Category1 </a>
-        <a style="margin: 0 1em;" href="#">Category2 </a>
-        <a style="margin: 0 1em;" href="#">Category3 </a>
-        <a style="margin: 0 1em;" href="#">Category4 </a>
-        <a style="margin: 0 1em;" href="#">Category5 </a>
-        <a style="margin: 0 1em;" href="#">Category6 </a>
-        <a style="margin: 0 1em;" href="#">Category7 </a>
-        <a style="margin: 0 1em;" href="#">Category8 </a>
-        <a style="margin: 0 1em;" href="#">Category9 </a>
-        <a style="margin: 0 1em;" href="#">Category10</a>
+        <a style="margin: 0 2.5vw;" href="#">Category1 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category2 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category3 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category4 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category5 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category6 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category7 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category8 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category9 </a>
+        <a style="margin: 0 2.5vw;" href="#">Category10</a>
     </div>
 
 <pre>
