--- a/widgets/index.html
+++ b/widgets/index.html
@@ -18,6 +18,7 @@ font-family: "Arimo", serif;
 /* font-family: Inter, sans-serif; */
 /* font-feature-settings: 'liga' 1, 'calt' 1, 'ccmp' 1;  */
 -webkit-font-smoothing: antialiased;
+font-size: smaller;
 }
 h2:hover::after,h3:hover::after,h4:hover::after,h5:hover::after{content: '\00a0 \F470'; font-family:'Bootstrap-icons'; font-size: smaller;}
 
@@ -28,7 +29,7 @@ h2:hover::after,h3:hover::after,h4:hover::after,h5:hover::after{content: '\00a0 
     border-radius: .5rem;
 }
 
-.note>p{
+.note p{
     margin: 2vh 2vw;
 }
 
@@ -65,10 +66,13 @@ pre{
     <p>Some predefined widgets for web.</p>
 
     <h2>Horizontal scrollable</h2>
-    <p style="color: gray;"><div style="display: inline-block; background-color: rgb(242, 241, 241); padding: .5rem 1rem; border-radius: .7rem;">Shift</div> + wheel to scroll horizontally</p>
+    
     <div class="note">
         <p>
-            For customization purposes, contents inside do not have any pre-defined styles.
+            For customization purposes, contents inside do not have any pre-defined styles. <br>
+        </p>
+        <p>
+            For devices with a mouse: <span style="box-shadow: 1px 1px 1px; display: inline-block; background-color: rgb(242, 241, 241); padding: .3rem .6rem; border-radius: .5rem;">Shift</span> + wheel to scroll horizontally
         </p>
     </div>
 
