--- a/fontcss.html
+++ b/fontcss.html
@@ -195,7 +195,7 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
 <pre class="prettyprint lang-html" style="border: 0px; padding: 1.5rem 1rem; border-radius: .5rem;" translate="no" onclick="navigator.clipboard,writeText(wkadapt)">
 :root{
     -webkit-font-smoothing: antialiased;
-    font-synthesis: none;
+    font-synthesis-weight: none;
     -webkit-text-stroke-width: 0;
 }
 </pre>
