--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ text-decoration: underline;
 #mobMenu{
     /* top:-100%; */
     transform: translateY(-100%);
-    transition: .5s;
+    transition: transform .5s;
 }
 
 #mobMenu a{
