--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     </div>
     <div id="pcMenu" style="max-width: 75%; overflow-x:auto; text-wrap: nowrap; margin: auto 0;">
         <!-- <a href="" id="contact">Contact</a> -->
-        <a href="https://blog.zhoulingyu.net">Blog</a>
+        <a href="https://xolyn.github.io/blog">Blog</a>
         <!-- <a href="https://xolyn.github.io/proj">Project</a> -->
         <a href="https://portfolio.zhoulingyu.net">Portfolio</a>
         <a href="https://drive.zhoulingyu.net" translate="no">ZDrive</a>
