--- a/index.html
+++ b/index.html
@@ -358,16 +358,45 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 
 </article>
 
+<article id="publications">
+<h1 style="">publications</h1>
+
+<ul>
+    <li>
+        <h1><a href="http://doi.org/10.1007/978-981-99-6441-3_96">Analysis of the Hog Futures Market in China (BPS_0799)</a></h1>
+        <p>
+            <i>Applied Economics and Policy Studies</i>(ISSN 2731-4006), <i>Advances in Economics Management and Political Sciences</i> (Print ISSN 2754-1169) <br>
+            Chen Xu, Lingyu Zhou, Anshi Lou, Manqi Qiu & Mengyu Cao 
+        </p>
+        
+    </li>
+    <li>
+        <h1>Purchasing practices and labor outcomes in global supply chains</h1>
+        <p>
+            <i>British Journal ofIndustrial Relations</i>, <span style="color: grey;">under review</span><br>
+            Sarosh Kuruvilla, Chunyun Li, Lingyu Zhou
+        </p>
+    </li>
+</ul>
+</article>
+
 <article id="beliefs">
     <h1 style="">beliefs</h1>
-    <p>
+    <!-- <p>
 
     • Detail matters.<br>
     • Never too late to act.<br>
     • Simplicity is the ultimate sophistication.<br>
     • Live in the present.<br>
 
-    </p>
+    </p> -->
+
+    <ul>
+        <li>Detail matters.</li>
+        <li>Never too late to act.</li>
+        <li>Simplicity is the ultimate sophistication.</li>
+        <li>Live in the present.</li>
+    </ul>
 </article>
 
 <article id="contact">
