--- a/index.html
+++ b/index.html
@@ -465,15 +465,32 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     <span style="font-weight: 800;">&nbsp;</span>
 
     <p style="line-height: 150%;">
-        <a href="" style="color: grey">Report a problem</a>
+        <a href="ghp-report@zly.vg" style="color: grey">Report a problem</a>
         <br>
-        <a href="" style="color: grey">Terms and policies</a>
+        <a href="javascript: void(0)" style="color: grey" onclick="myModal.style.display='flex'">Terms and policies</a>
     </p>
     
 </article>
 </footer>
 
-<div id="end"></div>
+<div class="modal" id="myModal" style="display: none; z-index: 999; width: 100dvw; height: 100dvh; left: 0; top:0; background-color: rgba(255,255,255,0.3);
+backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);  position: fixed; cursor: pointer;
+">
+<div style="background-color: #fff; margin: 5vh 5vw; border-radius: 3rem;">
+
+<div onclick="myModal.style.display='none'" style="text-align: right; font-family: inter; margin: 5vh 5vw; font-size: larger;"></div>
+<div style="margin: 5vh 5vw; overflow-y: auto; max-height: 80%;">
+<h1>Terms and conditions</h1>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum quasi laudantium ipsa veritatis suscipit consectetur ipsam, delectus at unde, cum quisquam omnis doloribus culpa blanditiis repellat error itaque enim laboriosam, optio harum reprehenderit facilis. Fugiat architecto quod maiores iste unde repellat maxime! Animi aspernatur blanditiis odio ea sed autem facilis distinctio voluptate fugit laborum corporis obcaecati velit natus corrupti non sunt similique cum ipsam, minus ullam voluptates perspiciatis neque! Porro autem dicta labore quaerat aliquid atque eligendi suscipit voluptas, sequi cumque error odio magni a optio saepe provident sit nisi veritatis quibusdam? Neque a totam placeat dolor, eligendi architecto eum?
+
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus repellat est consequuntur provident eius cum, aperiam non! A laudantium, quia pariatur reprehenderit debitis quaerat illum, expedita, natus libero aut possimus qui assumenda! Consequatur error assumenda, voluptate dicta vero, vitae cupiditate aliquid quis accusantium magni quas doloremque amet accusamus fugit explicabo quasi iure saepe nobis quod ab quae aliquam repellendus! Unde eveniet, eius nobis blanditiis quae sit doloribus laborum iusto deleniti dolores? Ullam corporis autem doloribus ipsam exercitationem itaque sequi. Impedit, recusandae alias. Iste aliquam quibusdam illo veniam dolores hic possimus necessitatibus nesciunt impedit ex. Suscipit, dicta nulla in nostrum a ducimus beatae eius rem reprehenderit! Perspiciatis illum possimus ducimus delectus blanditiis libero! Totam autem alias ipsum sapiente nemo maiores ad delectus amet ut hic sit optio quaerat magni dolorum eum molestias inventore, ipsam incidunt quis natus beatae voluptatibus quas doloribus. Totam temporibus quo unde accusamus officia, aspernatur quia voluptatem dolores perferendis vero a, ea animi natus illum adipisci suscipit. Necessitatibus nam nisi soluta ea cumque sequi quia, praesentium doloribus, ducimus saepe placeat quibusdam nobis fugiat eaque harum eveniet, enim non unde corrupti veniam atque. Excepturi, itaque sed. Ullam iusto mollitia ipsam, ducimus, distinctio consequatur cumque aspernatur magnam officiis quasi neque soluta fugiat quam, iure corporis delectus? Ipsa fugit aliquam, tempora explicabo impedit ab assumenda quos nobis. Rerum vero dolore dolores nam, nulla quo illo saepe, fugit necessitatibus distinctio exercitationem quibusdam nemo molestiae fuga quae. Beatae mollitia alias voluptatem earum ipsam consectetur in et. Nostrum praesentium aperiam quia reiciendis tempore quos asperiores quibusdam aut ex omnis officiis dignissimos expedita illum, sunt doloremque, rerum consectetur. Dolorem blanditiis quidem perspiciatis cumque earum itaque doloribus natus cum ducimus non aliquam repudiandae esse aspernatur sit maiores impedit, eius eveniet ipsam officiis suscipit hic voluptatibus in! Corrupti eos eligendi iste voluptatum tenetur eaque sunt ab temporibus!
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex maiores? Earum inventore, quisquam eveniet culpa quibusdam, nisi veniam dicta eius eum dolore, atque illo molestiae velit sed voluptatem. Error, officia repellat cupiditate asperiores ullam nesciunt obcaecati dolor aliquid rem minima quibusdam accusamus nulla at sunt! Repellendus vero, doloribus magni nemo non error recusandae itaque nisi maiores rerum dolor enim perspiciatis ratione molestias corporis ea? Fuga deleniti, optio voluptas dolor molestias dolores dolorum, laborum, distinctio hic reprehenderit ad assumenda eveniet alias dignissimos cum doloremque magnam id aperiam sed enim odio ipsum quibusdam vero! Dolore vitae blanditiis cupiditate alias quaerat quae eum cum culpa nihil sunt sed perspiciatis aperiam possimus dicta officia nesciunt, consequuntur rem maxime autem iste accusantium tempore consequatur magni quidem! Perspiciatis, earum illo alias cumque vitae sit hic recusandae enim voluptatum eos corrupti sapiente natus! Est ut ipsa temporibus fuga fugit? Quas tempora sunt dolor numquam neque veritatis vero officiis incidunt voluptas quidem. Nihil fuga magni voluptates! Quas repudiandae quis aperiam voluptatem iusto veniam dolore iste distinctio. Nostrum ex, recusandae voluptatibus natus perspiciatis nesciunt qui blanditiis odio? Ipsam deleniti voluptate facilis aliquam eos dolor sapiente eius quisquam voluptates sit enim quae dignissimos vero repudiandae nobis quos voluptas harum veritatis, officia tempore, dolore consectetur voluptatibus? Explicabo quas perferendis atque fugiat iure facere aliquid dicta. Rem est fugit consequatur quas amet quisquam at voluptate voluptas reprehenderit autem quaerat eveniet aliquam pariatur ipsum earum optio nihil maxime ex, fuga accusantium. Aspernatur soluta rem eius nam sapiente incidunt numquam quo ea quibusdam nesciunt omnis maiores vero, nulla quas, reprehenderit earum eligendi blanditiis. Ab dicta itaque possimus maiores voluptatibus odit quia nostrum. Sint incidunt possimus similique maiores recusandae dolore voluptatem quo labore doloremque asperiores omnis harum, pariatur blanditiis voluptates culpa tenetur libero alias vero sapiente, totam aliquid temporibus unde repudiandae. Praesentium, laudantium aliquam?
+</p>
+</div>
+</div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" ></script>
 <script>
