--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel='stylesheet' href='font.css'>
-<link rel="shortcut icon" href="https://f.zly.vg/assets/kDisk.png">
+<!-- <link rel="shortcut icon" href="https://f.zly.vg/assets/kDisk.png"> -->
+<link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/105/105113.png">
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-<title>214</title>
+<title>Lingyu Zhou</title>
 <style>
 
 :root{
