--- a/index.html
+++ b/index.html
@@ -285,8 +285,17 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     <h1 style="">projects</h1>
 
 <div class="swiper">
-
     <div class="swiper-wrapper">
+
+        <div class="swiper-slide">
+        <div id="proj">
+            <img   src="https://chalmersindustriteknik.se/app/uploads/Optimering_overgripande.jpg" style="width: 100%;">
+            <div id="projDesc">
+                <a href="academic/opt.html">Optimization plyaground</a>
+            </div>
+        </div>
+        </div>
+
       <div class="swiper-slide">
         <div id="proj">
             <img   src="https://f.zly.vg/assets/yafiwg.jpg" style="width: 100%;">
