--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 #index{ font-weight: 400; } 
 #index:hover{ font-weight: 800; }
 
+ul{
+    padding: 0 1em;
+}
+
 a{
     color: inherit;
     transition: opacity .35s;
@@ -290,7 +294,8 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 
         <div class="swiper-slide">
         <div id="proj">
-            <img   src="https://chalmersindustriteknik.se/app/uploads/Optimering_overgripande.jpg" style="width: 100%;">
+            <!-- https://chalmersindustriteknik.se/app/uploads/Optimering_overgripande.jpg -->
+            <img src="https://images.unsplash.com/photo-1628268509381-c70293fa638d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 100%;">
             <div id="projDesc">
                 <a href="academic/opt.html">Optimization plyaground</a>
             </div>
