--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@ margin: .25rem 0;
 }
 
 tr>td:first-child{
-    width: 35%;
+    width: 65%;
 }
 
 tr>td:nth-child(2){
-    width: 65%;
+    width: 35%;
     text-align: right;
 }
 
@@ -142,7 +142,7 @@ tr>td:nth-child(2){
     width: 100%;
 }
 
-td{padding: .1rem 0;}
+td{padding: .25rem 0;}
 
 table, tr, td {
     border: none;
@@ -267,20 +267,20 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     <table id="edutable" style="border: none;" cellspacing="0" cellpadding="0">
         <tbody>
         <tr>
-            <td>Middle School</td>
-            <td><a href="http://njjlhw.njgljy.com/">Nanjing Jinling Huiwen School</a></td>
-        </tr>
-        <tr>
-            <td>High School</td>
-            <td><a href="http://www.jzhx.net/">Jinling High School Hexi Campus</a></td>
-        </tr>
-        <tr>
-            <td>Bachelor's</td>
-            <td><a href="http://wisc.edu/">University of Wisconsin - Madison</a></td>
-        </tr>
-        <tr>
-            <td>Master's</td>
             <td> <a href="http://cornell.edu/">Cornell University</a></td>
+            <td>Master's</td>
+        </tr>
+        <tr>
+            <td><a href="http://wisc.edu/">University of Wisconsin - Madison</a></td>
+            <td>Bachelor's</td>
+        </tr>
+        <tr>
+            <td><a href="http://www.jzhx.net/">Jinling High School Hexi Campus</a></td>
+            <td>High School</td>
+        </tr>
+        <tr>
+            <td><a href="http://njjlhw.njgljy.com/">Nanjing Jinling Huiwen School</a></td>
+            <td>Middle School</td>
         </tr>
         </tbody>
     </table>
@@ -378,7 +378,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 
 <ul>
     <li>
-        <h1><a href="http://doi.org/10.1007/978-981-99-6441-3_96">Analysis of the Hog Futures Market in China (BPS_0799)</a></h1>
+        <span><a href="http://doi.org/10.1007/978-981-99-6441-3_96">Analysis of the Hog Futures Market in China (BPS_0799)</a></span>
         <p>
             <i>Applied Economics and Policy Studies</i>(ISSN 2731-4006), <i>Advances in Economics Management and Political Sciences</i> (Print ISSN 2754-1169) <br>
             Chen Xu, Lingyu Zhou, Anshi Lou, Manqi Qiu & Mengyu Cao 
@@ -386,7 +386,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         
     </li>
     <li>
-        <h1>Purchasing practices and labor outcomes in global supply chains</h1>
+        <span>Purchasing practices and labor outcomes in global supply chains</span>
         <p>
             <i>British Journal ofIndustrial Relations</i>, <span style="color: grey;">under review</span><br>
             Sarosh Kuruvilla, Chunyun Li, Lingyu Zhou
